Use circleci convenience images
circleci/ images are deprecated

--- a/assets/stylesheets/app-0.2.14.css
+++ b/assets/stylesheets/app-0.2.14.css
@@ -3,8 +3,7 @@
 .govuk-link {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
+  -moz-osx-font-smoothing: grayscale
 }
 
 /*! Copyright (c) 2011 by Margaret Calvert & Henrik Kubel. All rights reserved. The font has been customised for exclusive use on gov.uk. This cut is not commercially available. */
@@ -65,64 +64,33 @@
   }
 }
 
+.govuk-link--muted:active,
+.govuk-link--muted:hover,
 .govuk-link--muted:link,
 .govuk-link--muted:visited {
   color: #505a5f
-}
-
-.govuk-link--muted:active,
-.govuk-link--muted:hover {
-  color: #0b0c0c
 }
 
 .govuk-link--muted:focus {
   color: #0b0c0c
 }
 
+.govuk-link--text-colour:active,
+.govuk-link--text-colour:focus,
+.govuk-link--text-colour:hover,
 .govuk-link--text-colour:link,
 .govuk-link--text-colour:visited {
   color: #0b0c0c
 }
 
 @media print {
+  .govuk-link--text-colour:active,
+  .govuk-link--text-colour:focus,
+  .govuk-link--text-colour:hover,
   .govuk-link--text-colour:link,
   .govuk-link--text-colour:visited {
     color: #000
   }
-}
-
-.govuk-link--text-colour:hover {
-  color: rgba(11,12,12,.99)
-}
-
-.govuk-link--text-colour:active,
-.govuk-link--text-colour:focus {
-  color: #0b0c0c
-}
-
-@media print {
-  .govuk-link--text-colour:active,
-  .govuk-link--text-colour:focus {
-    color: #000
-  }
-}
-
-.govuk-link--inverse:link,
-.govuk-link--inverse:visited {
-  color: #fff
-}
-
-.govuk-link--inverse:active,
-.govuk-link--inverse:hover {
-  color: hsla(0,0%,100%,.99)
-}
-
-.govuk-link--inverse:focus {
-  color: #0b0c0c
-}
-
-.govuk-link--no-underline:not(:hover):not(:active) {
-  text-decoration: none
 }
 
 .govuk-link--no-visited-state:link,
@@ -1220,8 +1188,7 @@
   -webkit-appearance: none;
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
+  -moz-osx-font-smoothing: grayscale
 }
 
 @media (min-width:40.0625em) {
@@ -1272,7 +1239,15 @@
   position: relative;
   padding-right: 40px;
   border-top: 1px solid #b1b4b6;
+  color: #1d70b8;
   cursor: pointer
+}
+
+@media (hover:none) {
+  .js-enabled .govuk-accordion__section-header:hover {
+    border-top-color: #1d70b8;
+    box-shadow: inset 0 3px 0 0 #1d70b8
+  }
 }
 
 .js-enabled .govuk-accordion__section-button {
@@ -1284,7 +1259,7 @@
   margin-left: 0;
   padding: 0;
   border-width: 0;
-  color: #1d70b8;
+  color: inherit;
   background: 0 0;
   text-align: left;
   cursor: pointer;
@@ -1320,9 +1295,7 @@
 }
 
 .js-enabled .govuk-accordion__section-button:hover:not(:focus) {
-  color: #003078;
-  text-decoration: underline;
-  text-underline-offset: .1em
+  text-decoration: underline
 }
 
 @media (hover:none) {
@@ -1379,7 +1352,6 @@
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline;
   display: inline-block;
   position: relative;
   margin-top: 15px;
@@ -1410,32 +1382,34 @@
   text-decoration: none
 }
 
+.govuk-back-link:active,
+.govuk-back-link:focus,
+.govuk-back-link:hover,
 .govuk-back-link:link,
 .govuk-back-link:visited {
   color: #0b0c0c
 }
 
 @media print {
+  .govuk-back-link:active,
+  .govuk-back-link:focus,
+  .govuk-back-link:hover,
   .govuk-back-link:link,
   .govuk-back-link:visited {
     color: #000
   }
 }
 
-.govuk-back-link:hover {
-  color: rgba(11,12,12,.99)
+.govuk-back-link[href] {
+  text-decoration: underline
 }
 
-.govuk-back-link:active,
-.govuk-back-link:focus {
-  color: #0b0c0c
+.govuk-back-link[href]:focus {
+  text-decoration: none
 }
 
-@media print {
-  .govuk-back-link:active,
-  .govuk-back-link:focus {
-    color: #000
-  }
+.govuk-back-link[href]:focus:before {
+  border-color: #0b0c0c
 }
 
 .govuk-back-link:before {
@@ -1452,10 +1426,6 @@
   border: solid;
   border-width: 1px 1px 0 0;
   border-color: #505a5f
-}
-
-.govuk-back-link:focus:before {
-  border-color: #0b0c0c
 }
 
 .govuk-back-link:after {
@@ -1550,8 +1520,7 @@
 .govuk-breadcrumbs__link {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
+  -moz-osx-font-smoothing: grayscale
 }
 
 @media print {
@@ -1568,30 +1537,20 @@
   text-decoration: none
 }
 
+.govuk-breadcrumbs__link:active,
+.govuk-breadcrumbs__link:focus,
+.govuk-breadcrumbs__link:hover,
 .govuk-breadcrumbs__link:link,
 .govuk-breadcrumbs__link:visited {
   color: #0b0c0c
 }
 
 @media print {
+  .govuk-breadcrumbs__link:active,
+  .govuk-breadcrumbs__link:focus,
+  .govuk-breadcrumbs__link:hover,
   .govuk-breadcrumbs__link:link,
   .govuk-breadcrumbs__link:visited {
-    color: #000
-  }
-}
-
-.govuk-breadcrumbs__link:hover {
-  color: rgba(11,12,12,.99)
-}
-
-.govuk-breadcrumbs__link:active,
-.govuk-breadcrumbs__link:focus {
-  color: #0b0c0c
-}
-
-@media print {
-  .govuk-breadcrumbs__link:active,
-  .govuk-breadcrumbs__link:focus {
     color: #000
   }
 }
@@ -1729,6 +1688,12 @@
   cursor: default
 }
 
+.govuk-button--disabled:focus,
+.govuk-button[disabled=disabled]:focus,
+.govuk-button[disabled]:focus {
+  outline: 0
+}
+
 .govuk-button--disabled:active,
 .govuk-button[disabled=disabled]:active,
 .govuk-button[disabled]:active {
@@ -1805,8 +1770,7 @@
   margin-left: 5px;
   vertical-align: middle;
   flex-shrink: 0;
-  align-self: center;
-  forced-color-adjust: auto
+  align-self: center
 }
 
 @media (min-width:48.0625em) {
@@ -2326,16 +2290,7 @@
 
 .govuk-checkboxes__input:focus + .govuk-checkboxes__label:before {
   border-width: 4px;
-  outline: 3px solid transparent;
-  outline-offset: 1px;
   box-shadow: 0 0 0 3px #fd0
-}
-
-@media (-ms-high-contrast:active),
-screen and (forced-colors:active) {
-  .govuk-checkboxes__input:focus + .govuk-checkboxes__label:before {
-    outline-color: Highlight
-  }
 }
 
 .govuk-checkboxes__input:checked + .govuk-checkboxes__label:after {
@@ -2349,40 +2304,6 @@ screen and (forced-colors:active) {
 
 .govuk-checkboxes__input:disabled + .govuk-checkboxes__label {
   opacity: .5
-}
-
-.govuk-checkboxes__divider {
-  font-family: GDS Transport,arial,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 1.25;
-  color: #0b0c0c;
-  width: 40px;
-  margin-bottom: 10px;
-  text-align: center
-}
-
-@media print {
-  .govuk-checkboxes__divider {
-    font-family: sans-serif
-  }
-}
-
-@media (min-width:40.0625em) {
-  .govuk-checkboxes__divider {
-    font-size: 1.1875rem;
-    line-height: 1.31579
-  }
-}
-
-@media print {
-  .govuk-checkboxes__divider {
-    font-size: 14pt;
-    line-height: 1.15;
-    color: #000
-  }
 }
 
 .govuk-checkboxes__conditional {
@@ -3146,9 +3067,7 @@ screen and (forced-colors:active) {
 }
 
 .govuk-details__text {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 20px;
+  padding: 15px 15px 15px 20px;
   border-left: 5px solid #b1b4b6
 }
 
@@ -3271,8 +3190,7 @@ screen and (forced-colors:active) {
   font-weight: 700;
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
+  -moz-osx-font-smoothing: grayscale
 }
 
 @media print {
@@ -3310,9 +3228,8 @@ screen and (forced-colors:active) {
   font-size: 1rem;
   line-height: 1.25;
   color: #0b0c0c;
-  max-width: 100%;
-  margin-left: -5px;
-  padding: 5px
+  padding-top: 5px;
+  padding-bottom: 5px
 }
 
 @media print {
@@ -3336,18 +3253,20 @@ screen and (forced-colors:active) {
   }
 }
 
-.govuk-file-upload::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  color: inherit;
-  font: inherit
-}
-
 .govuk-file-upload:focus {
+  margin-right: -5px;
+  margin-left: -5px;
+  padding-right: 5px;
+  padding-left: 5px;
   outline: 3px solid #fd0;
   box-shadow: inset 0 0 0 4px #0b0c0c
 }
 
 .govuk-file-upload:focus-within {
+  margin-right: -5px;
+  margin-left: -5px;
+  padding-right: 5px;
+  padding-left: 5px;
   outline: 3px solid #fd0;
   box-shadow: inset 0 0 0 4px #0b0c0c
 }
@@ -3393,17 +3312,11 @@ screen and (forced-colors:active) {
   }
 }
 
-.govuk-footer__link {
-  font-family: GDS Transport,arial,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
-}
-
-@media print {
-  .govuk-footer__link {
-    font-family: sans-serif
-  }
+.govuk-footer__link:active,
+.govuk-footer__link:hover,
+.govuk-footer__link:link,
+.govuk-footer__link:visited {
+  color: #0b0c0c
 }
 
 .govuk-footer__link:focus {
@@ -3412,34 +3325,6 @@ screen and (forced-colors:active) {
   background-color: #fd0;
   box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
   text-decoration: none
-}
-
-.govuk-footer__link:link,
-.govuk-footer__link:visited {
-  color: #0b0c0c
-}
-
-@media print {
-  .govuk-footer__link:link,
-  .govuk-footer__link:visited {
-    color: #000
-  }
-}
-
-.govuk-footer__link:hover {
-  color: rgba(11,12,12,.99)
-}
-
-.govuk-footer__link:active,
-.govuk-footer__link:focus {
-  color: #0b0c0c
-}
-
-@media print {
-  .govuk-footer__link:active,
-  .govuk-footer__link:focus {
-    color: #000
-  }
 }
 
 .govuk-footer__section-break {
@@ -3482,8 +3367,7 @@ screen and (forced-colors:active) {
 .govuk-footer__licence-logo {
   display: inline-block;
   margin-right: 10px;
-  vertical-align: top;
-  forced-color-adjust: auto
+  vertical-align: top
 }
 
 @media (max-width:48.0525em) {
@@ -3505,6 +3389,7 @@ screen and (forced-colors:active) {
   background-position: 50% 0;
   background-size: 125px 102px;
   text-align: center;
+  text-decoration: none;
   white-space: nowrap
 }
 
@@ -3585,10 +3470,6 @@ only screen and (min-resolution:192dpi) {
   list-style: none;
   -moz-column-gap: 30px;
   column-gap: 30px
-}
-
-.govuk-footer__list .govuk-footer__link:hover {
-  text-decoration-thickness: auto
 }
 
 @media (min-width:48.0625em) {
@@ -3676,17 +3557,6 @@ only screen and (min-resolution:192dpi) {
   margin-right: 5px
 }
 
-@media (forced-colors:active) {
-  .govuk-header__logotype {
-    forced-color-adjust: none;
-    color: linktext
-  }
-}
-
-.govuk-header__logotype:last-child {
-  margin-right: 0
-}
-
 .govuk-header__logotype-crown {
   position: relative;
   top: -1px;
@@ -3699,7 +3569,7 @@ only screen and (min-resolution:192dpi) {
   width: 36px;
   height: 32px;
   border: 0;
-  vertical-align: bottom
+  vertical-align: middle
 }
 
 .govuk-header__product-name {
@@ -3709,7 +3579,8 @@ only screen and (min-resolution:192dpi) {
   font-weight: 400;
   font-size: 1.125rem;
   line-height: 1;
-  display: inline-table
+  display: inline-table;
+  padding-right: 10px
 }
 
 @media print {
@@ -3733,16 +3604,7 @@ only screen and (min-resolution:192dpi) {
 }
 
 .govuk-header__link {
-  font-family: GDS Transport,arial,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   text-decoration: none
-}
-
-@media print {
-  .govuk-header__link {
-    font-family: sans-serif
-  }
 }
 
 .govuk-header__link:link,
@@ -3750,15 +3612,8 @@ only screen and (min-resolution:192dpi) {
   color: #fff
 }
 
-.govuk-header__link:active,
 .govuk-header__link:hover {
-  color: hsla(0,0%,100%,.99)
-}
-
-.govuk-header__link:hover {
-  text-decoration: underline;
-  text-decoration-thickness: 3px;
-  text-underline-offset: .1em
+  text-decoration: underline
 }
 
 .govuk-header__link:focus {
@@ -3775,7 +3630,6 @@ only screen and (min-resolution:192dpi) {
   -moz-osx-font-smoothing: grayscale;
   font-weight: 700;
   display: inline-block;
-  margin-right: 10px;
   font-size: 30px;
   line-height: 1
 }
@@ -3793,8 +3647,8 @@ only screen and (min-resolution:192dpi) {
 
 .govuk-header__link--homepage:active,
 .govuk-header__link--homepage:hover {
-  margin-bottom: -3px;
-  border-bottom: 3px solid
+  margin-bottom: -1px;
+  border-bottom: 1px solid
 }
 
 .govuk-header__link--homepage:focus {
@@ -3881,8 +3735,7 @@ only screen and (min-resolution:192dpi) {
   padding: 0;
   border: 0;
   color: #fff;
-  background: 0 0;
-  cursor: pointer
+  background: 0 0
 }
 
 @media print {
@@ -3906,8 +3759,7 @@ only screen and (min-resolution:192dpi) {
 }
 
 .govuk-header__menu-button:hover {
-  text-decoration: solid underline 3px;
-  text-underline-offset: .1em
+  text-decoration: underline
 }
 
 .govuk-header__menu-button:focus {
@@ -4276,8 +4128,7 @@ only screen and (min-resolution:192dpi) {
 .govuk-notification-banner__link {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
+  -moz-osx-font-smoothing: grayscale
 }
 
 @media print {
@@ -4365,9 +4216,7 @@ only screen and (min-resolution:192dpi) {
 
 @media (max-width:40.0525em) {
   .govuk-panel {
-    padding: 10px;
-    overflow-wrap: break-word;
-    word-wrap: break-word
+    padding: 25px
   }
 }
 
@@ -4580,7 +4429,7 @@ only screen and (min-resolution:192dpi) {
 
 .govuk-phase-banner__text {
   display: table-cell;
-  vertical-align: middle
+  vertical-align: baseline
 }
 
 .govuk-tabs {
@@ -4683,26 +4532,8 @@ only screen and (min-resolution:192dpi) {
 }
 
 .govuk-tabs__tab {
-  font-family: GDS Transport,arial,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline;
   display: inline-block;
   margin-bottom: 10px
-}
-
-@media print {
-  .govuk-tabs__tab {
-    font-family: sans-serif
-  }
-}
-
-.govuk-tabs__tab:focus {
-  outline: 3px solid transparent;
-  background-color: #fd0;
-  box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
-  text-decoration: none;
-  color: #0b0c0c
 }
 
 .govuk-tabs__tab:link {
@@ -4719,6 +4550,14 @@ only screen and (min-resolution:192dpi) {
 
 .govuk-tabs__tab:active {
   color: #0b0c0c
+}
+
+.govuk-tabs__tab:focus {
+  outline: 3px solid transparent;
+  color: #0b0c0c;
+  background-color: #fd0;
+  box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
+  text-decoration: none
 }
 
 .govuk-tabs__panel {
@@ -4780,6 +4619,9 @@ only screen and (min-resolution:192dpi) {
     margin-bottom: 0
   }
 
+  .js-enabled .govuk-tabs__tab:active,
+  .js-enabled .govuk-tabs__tab:focus,
+  .js-enabled .govuk-tabs__tab:hover,
   .js-enabled .govuk-tabs__tab:link,
   .js-enabled .govuk-tabs__tab:visited {
     color: #0b0c0c
@@ -4787,26 +4629,11 @@ only screen and (min-resolution:192dpi) {
 }
 
 @media print and (min-width:40.0625em) {
+  .js-enabled .govuk-tabs__tab:active,
+  .js-enabled .govuk-tabs__tab:focus,
+  .js-enabled .govuk-tabs__tab:hover,
   .js-enabled .govuk-tabs__tab:link,
   .js-enabled .govuk-tabs__tab:visited {
-    color: #000
-  }
-}
-
-@media (min-width:40.0625em) {
-  .js-enabled .govuk-tabs__tab:hover {
-    color: rgba(11,12,12,.99)
-  }
-
-  .js-enabled .govuk-tabs__tab:active,
-  .js-enabled .govuk-tabs__tab:focus {
-    color: #0b0c0c
-  }
-}
-
-@media print and (min-width:40.0625em) {
-  .js-enabled .govuk-tabs__tab:active,
-  .js-enabled .govuk-tabs__tab:focus {
     color: #000
   }
 }
@@ -4939,16 +4766,7 @@ only screen and (min-resolution:192dpi) {
 
 .govuk-radios__input:focus + .govuk-radios__label:before {
   border-width: 4px;
-  outline: 3px solid transparent;
-  outline-offset: 1px;
   box-shadow: 0 0 0 4px #fd0
-}
-
-@media (-ms-high-contrast:active),
-screen and (forced-colors:active) {
-  .govuk-radios__input:focus + .govuk-radios__label:before {
-    outline-color: Highlight
-  }
 }
 
 .govuk-radios__input:checked + .govuk-radios__label:after {
@@ -5184,7 +5002,6 @@ screen and (forced-colors:active) {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline;
   font-size: .875rem;
   line-height: 1.14286;
   display: block;
@@ -5201,8 +5018,7 @@ screen and (forced-colors:active) {
   clip: auto!important;
   -webkit-clip-path: none!important;
   clip-path: none!important;
-  white-space: inherit!important;
-  color: #0b0c0c
+  white-space: inherit!important
 }
 
 @media print {
@@ -5211,25 +5027,20 @@ screen and (forced-colors:active) {
   }
 }
 
+.govuk-skip-link:active,
+.govuk-skip-link:focus,
+.govuk-skip-link:hover,
 .govuk-skip-link:link,
 .govuk-skip-link:visited {
   color: #0b0c0c
 }
 
 @media print {
+  .govuk-skip-link:active,
+  .govuk-skip-link:focus,
+  .govuk-skip-link:hover,
   .govuk-skip-link:link,
   .govuk-skip-link:visited {
-    color: #000
-  }
-}
-
-.govuk-skip-link:hover {
-  color: rgba(11,12,12,.99)
-}
-
-@media print {
-  .govuk-skip-link:active,
-  .govuk-skip-link:focus {
     color: #000
   }
 }
@@ -5509,10 +5320,9 @@ screen and (forced-colors:active) {
   line-height: 29px;
   text-align: center;
   -webkit-user-select: none;
-  -ms-user-select: none;
   -moz-user-select: none;
-  user-select: none;
-  forced-color-adjust: none
+  -ms-user-select: none;
+  user-select: none
 }
 
 @media print {
@@ -5524,14 +5334,6 @@ screen and (forced-colors:active) {
 @media (min-width:40.0625em) {
   .govuk-warning-text__icon {
     margin-top: -5px
-  }
-}
-
-@media screen and (forced-colors:active) {
-  .govuk-warning-text__icon {
-    border-color: windowText;
-    color: windowText;
-    background: 0 0
   }
 }
 
@@ -6627,18 +6429,6 @@ screen and (forced-colors:active) {
   }
 }
 
-.govuk-\!-text-align-left {
-  text-align: left!important
-}
-
-.govuk-\!-text-align-centre {
-  text-align: center!important
-}
-
-.govuk-\!-text-align-right {
-  text-align: right!important
-}
-
 .govuk-\!-font-size-80 {
   font-size: 53px!important;
   line-height: 1.03774!important
@@ -7726,7 +7516,6 @@ screen and (forced-colors:active) {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline;
   border-bottom: 1px solid transparent;
   color: #fff;
   display: inline-block;
@@ -7947,8 +7736,7 @@ span.moj-header__link:hover {
 .moj-header__navigation-link {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
+  -moz-osx-font-smoothing: grayscale
 }
 
 @media print {
@@ -8461,8 +8249,7 @@ span.moj-header__link:hover {
 .moj-organisation-nav__link {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline
+  -moz-osx-font-smoothing: grayscale
 }
 
 @media print {
@@ -8700,7 +8487,6 @@ span.moj-header__link:hover {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline;
   display: block;
   padding: 5px;
   text-align: center;
@@ -8844,7 +8630,6 @@ span.moj-header__link:hover {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline;
   display: block;
   padding-bottom: 15px;
   padding-top: 15px;
@@ -9619,7 +9404,6 @@ span.moj-header__link:hover {
   font-family: GDS Transport,arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline;
   display: block;
   padding-top: 12px;
   padding-bottom: 12px;
